--- a/c3r-sdk-parquet/build.gradle
+++ b/c3r-sdk-parquet/build.gradle
@@ -167,12 +167,12 @@ jar {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier = "sources"
     from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier = "javadoc"
     from javadoc.destinationDir
 }
 
@@ -185,7 +185,11 @@ artifacts {
 publishing {
     publications {
         maven(MavenPublication) {
-            from components.java
+            version "1.0.0"
+            groupId 'software.amazon.c3r'
+            artifact jar
+            artifact sourcesJar
+            artifact javadocJar
             pom {
                 name = 'Amazon C3R SDK Parquet'
                 description = 'Cryptographic Computing for Clean Rooms SDK Parquet Support'
@@ -196,12 +200,17 @@ publishing {
                     connection = 'scm:git:ssh://git@github.com/aws/c3r.git'
                     developerConnection = 'scm:git:ssh://git@github.com/aws/c3r.git'
                 }
-
                 licenses {
                     license {
                         name = 'The Apache License, Version 2.0'
                         url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                         distribution = 'repo'
+                    }
+                }
+                developers {
+                    developer {
+                        id = "amazonwebservices"
+                        name = "Amazon Web Services"
                     }
                 }
             }
