--- a/.github/workflows/gradle-build-ci.yml
+++ b/.github/workflows/gradle-build-ci.yml
@@ -13,6 +13,9 @@ permissions:
   contents: read
 
 jobs:
+  # Adds the following filters:
+  # Only run when files that influence the build are updated.
+  # Don't run again if the same commit has already been run.
   filter:
     runs-on: ubuntu-latest
     outputs:
@@ -22,6 +25,7 @@ jobs:
         uses: fkirc/skip-duplicate-actions@v5.3.0
         with:
           concurrent_skipping: 'same_content_newer'
+          paths: '["**/src/**", "**.gradle", "samples/**", "config/**"]'
 
   gradle:
     strategy:
