--- a/c3r-sdk-core/build.gradle
+++ b/c3r-sdk-core/build.gradle
@@ -104,6 +104,9 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:5.1.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+
+    // Logging test tools
+    testImplementation 'io.github.hakky54:logcaptor:2.8.0'
 }
 
 test {
@@ -195,8 +198,12 @@ task testJar(type: Jar, dependsOn: [classes, testClasses]) {
 
 configurations {
     testArtifacts
+    testImplementation {
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
+        exclude group: 'org.slf4j', module: 'slf4j-reload4j'
+        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+    }
 }
-
 
 artifacts {
     archives sourcesJar
