--- a/c3r-cli/build.gradle
+++ b/c3r-cli/build.gradle
@@ -104,6 +104,7 @@ dependencies {
 
     // Test infrastructure
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
     // Logging test tools
