Update SDK-Core gradle file for Gradle 8

--- a/c3r-sdk-core/build.gradle
+++ b/c3r-sdk-core/build.gradle
@@ -174,7 +174,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 task testJar(type: Jar, dependsOn: [classes, testClasses]) {
-    classifier = 'tests'
+    archiveClassifier = 'tests'
     from sourceSets.test.output
 }
 
