Revert "Gradle ci version (#83)"
This reverts commit 2d355c2ad2a2ffd7f1d2ff57ee80515fffd9658a.

Revert "Bump com.github.johnrengelman.shadow from 7.1.2 to 8.1.0 (#82)"

This reverts commit 88298a21397997556a25803c8572411a4e79c72d.

--- a/c3r-sdk-core/build.gradle
+++ b/c3r-sdk-core/build.gradle
@@ -174,7 +174,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 task testJar(type: Jar, dependsOn: [classes, testClasses]) {
-    archiveClassifier = 'tests'
+    classifier = 'tests'
     from sourceSets.test.output
 }
 
