--- a/.github/workflows/javadocs.yml
+++ b/.github/workflows/javadocs.yml
@@ -8,9 +8,10 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
+  actions: write
   contents: read
-  pages: write
   id-token: write
+  pages: write
 
 # Allow one concurrent deployment (if a build is already in progress, cancel in favor of the latest Javadocs)
 concurrency:
