--- a/.github/workflows/javadocs.yml
+++ b/.github/workflows/javadocs.yml
@@ -8,7 +8,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  actions: write
+  actions: read
   contents: read
   id-token: write
   pages: write
