--- a/.github/workflows/javadocs.yml
+++ b/.github/workflows/javadocs.yml
@@ -28,12 +28,13 @@ jobs:
       - id: skip_check
         uses: fkirc/skip-duplicate-actions@v5.3.0
         with:
+          # If the Java sources, build files, configuration files or workflows have been updated, we should update the Javadocs.
           concurrent_skipping: 'same_content_newer'
-          paths: '["**/src/**", "**.gradle", "**/build.gradle"]'
+          paths: '["**/src/**", "**.gradle", "**/build.gradle", ".github/workflows/**"]'
   javadocs:
-    # Check for potentially new Javadocs
+    # Check for potentially new Javadocs and that we're on the correct repository
     needs: filter
-    if: ${{ needs.filter.outputs.should_skip != 'true' }}
+    if: ${{ needs.filter.outputs.should_skip != 'true' && github.repository == 'aws/c3r' }}
     # Set the URL to publish docs to (currently top-level GitHub Page for repo)
     environment:
       name: github-pages
