Should be a string option

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ repositories {
 
 tasks.withType(Javadoc) {
     title("C3R Javadocs Version 1.1.0-SNAPSHOT")
-    options.addNumberOption("source", 11)
+    options.addStringOption("source", "11")
     options.addStringOption("exclude", "com.amazonaws.c3r.cli:com.amazonaws.c3r.io.schema:com.amazonaws.c3r.examples")
     options.addStringOption("group", "Parquet com.amazonaws.c3r.action.ParquetRowMarshaller:com.amazonaws.c3r.action.ParquetRowUnmarshaller")
 }
