--- a/c3r-sdk-parquet/build.gradle
+++ b/c3r-sdk-parquet/build.gradle
@@ -164,9 +164,9 @@ publishing {
         maven(MavenPublication) {
             version "1.1.0"
             groupId 'software.amazon.c3r'
-            artifact jar
             artifact sourcesJar
             artifact javadocJar
+            from components.java
             pom {
                 name = 'Amazon C3R SDK Parquet'
                 description = 'Cryptographic Computing for Clean Rooms SDK Parquet Support'
@@ -194,7 +194,7 @@ publishing {
         }
     }
     repositories {
-        maven{
+        maven {
             url = 'https://aws.oss.sonatype.org/service/local/staging/deploy/maven2/'
             credentials(PasswordCredentials)
         }
