--- a/c3r-sdk-core/build.gradle
+++ b/c3r-sdk-core/build.gradle
@@ -1,26 +1,7 @@
-/*
- Applies core Gradle plugins, which are ones built into Gradle itself.
-*/
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-}
-
 plugins {
     // Java compilation, unit tests, and library distribution needs. Read more at:
     // https://docs.gradle.org/current/userguide/java_library_plugin.html
     id 'java-library'
-
-    // Checkstyle for style checks and reports on Java source files. Read more at:
-    // https://docs.gradle.org/current/userguide/checkstyle_plugin.html
-    id 'checkstyle'
-
-    // JaCoCo for coverage metrics and reports of Java source files. Read more at:
-    // https://docs.gradle.org/current/userguide/jacoco_plugin.html
-    id 'jacoco'
 
     // Maven publishing needs
     id 'maven-publish'
@@ -34,27 +15,10 @@ plugins {
 
     // Vanilla code generation. Read more at:
     // https://projectlombok.org/
-    id "io.freefair.lombok" version "8.0.1"
+    id "io.freefair.lombok" version "$freefair_version"
 }
 
 apply plugin: 'com.github.spotbugs'
-
-/*
- Configures the Checkstyle "checkstyle" plugin. Remove this and the plugin if
- you want to skip these checks and report generation.
-*/
-checkstyle {
-    sourceSets = [sourceSets.main, sourceSets.test]
-    configFile = file('../config/checkstyle/checkstyle.xml')
-    configProperties.put('checkstyle.suppression.filter', '../config/checkstyle/suppressions.xml')
-    configDirectory.set(file('../config/checkstyle'))
-    ignoreFailures = false
-}
-
-repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
-}
 
 /*
  Configures the SpotBugs "com.github.spotbugs" plugin. Remove this and the
@@ -67,11 +31,6 @@ spotbugs {
 }
 
 dependencies {
-    // Logging
-    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
-
     // AWS Clean Rooms
     implementation 'software.amazon.awssdk:cleanrooms:2.20.35'
 
@@ -86,12 +45,6 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.github.spotbugs/spotbugs-annotations
     implementation 'com.github.spotbugs:spotbugs-annotations:4.7.3'
-
-    // Testing
-    testImplementation 'org.mockito:mockito-core:5.2.0'
-    testImplementation 'org.mockito:mockito-inline:5.2.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
     // Logging test tools
     testImplementation 'io.github.hakky54:logcaptor:2.9.0'
@@ -138,36 +91,6 @@ tasks.register('checkFileUtilTest', Test) {
 }
 
 check.dependsOn checkFileUtilTest
-
-
-jacocoTestReport {
-    dependsOn test // tests are required to run before generating the report
-    reports {
-        csv.required = true
-        html.required = true
-    }
-}
-
-check.dependsOn jacocoTestCoverageVerification
-jacocoTestCoverageVerification {
-    violationRules {
-        rule {
-            limit {
-                minimum = 0.85
-            }
-        }
-    }
-}
-
-tasks.withType(JavaCompile) {
-    options.release = 11
-}
-
-jar {
-    manifest {
-        attributes('Multi-Release': true)
-    }
-}
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     archiveClassifier = "sources"
@@ -245,8 +168,4 @@ publishing {
 
 signing {
     sign publishing.publications.maven
-}
-
-tasks.withType(Javadoc) {
-    options.addBooleanOption("Xdoclint:-missing", true)
 }
