--- a/c3r-sdk-examples/build.gradle
+++ b/c3r-sdk-examples/build.gradle
@@ -1,23 +1,7 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-}
-
 plugins {
     // Java compilation, unit tests, and library distribution needs. Read more at:
     // https://docs.gradle.org/current/userguide/java_library_plugin.html
     id 'java-library'
-
-    // Checkstyle for style checks and reports on Java source files. Read more at:
-    // https://docs.gradle.org/current/userguide/checkstyle_plugin.html
-    id 'checkstyle'
-
-    // JaCoCo for coverage metrics and reports of Java source files. Read more at:
-    // https://docs.gradle.org/current/userguide/jacoco_plugin.html
-    id 'jacoco'
 
     // SpotBugs for quality checks and reports of source files. Read more at:
     // https://spotbugs.readthedocs.io/en/stable/gradle.html
@@ -25,23 +9,6 @@ plugins {
 }
 
 apply plugin: 'com.github.spotbugs'
-
-/*
- Configures the Checkstyle "checkstyle" plugin. Remove this and the plugin if
- you want to skip these checks and report generation.
-*/
-checkstyle {
-    sourceSets = [sourceSets.main, sourceSets.test]
-    configFile = file('../config/checkstyle/checkstyle.xml')
-    configProperties.put('checkstyle.suppression.filter', '../config/checkstyle/suppressions.xml')
-    configDirectory.set(file('../config/checkstyle'))
-    ignoreFailures = false
-}
-
-repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
-}
 
 /*
  Configures the SpotBugs "com.github.spotbugs" plugin. Remove this and the
@@ -53,18 +20,17 @@ spotbugs {
     excludeFilter.set(file("../config/spotbugs/excludeFilter.xml"))
 }
 
+ext.spark_version = '3.3.2'
+
 dependencies {
     // AWS-C3R
     implementation project(":c3r-sdk-core")
     implementation project(":c3r-sdk-parquet")
 
     // Spark
-    implementation 'org.apache.spark:spark-core_2.13:3.3.2'
-    implementation 'org.apache.spark:spark-streaming_2.13:3.3.2'
-    implementation 'org.apache.spark:spark-sql_2.13:3.3.2'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    implementation "org.apache.spark:spark-core_2.13:$spark_version"
+    implementation "org.apache.spark:spark-streaming_2.13:$spark_version"
+    implementation "org.apache.spark:spark-sql_2.13:$spark_version"
 }
 
 test {
@@ -88,37 +54,4 @@ test {
     // Required for Spark. While Spark supports Java 17, it still makes a call to this class
     // and will cause a runtime failure.
     jvmArgs '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
-}
-
-jacocoTestReport {
-    dependsOn test // tests are required to run before generating the report
-    reports {
-        csv.required = true
-        html.required = true
-    }
-}
-
-check.dependsOn jacocoTestCoverageVerification
-jacocoTestCoverageVerification {
-    violationRules {
-        rule {
-            limit {
-                minimum = 0.85
-            }
-        }
-    }
-}
-
-tasks.withType(JavaCompile) {
-    options.release = 11
-}
-
-jar {
-    manifest {
-        attributes('Multi-Release': true)
-    }
-}
-
-tasks.withType(Javadoc) {
-    options.addBooleanOption("Xdoclint:-missing", true)
 }
