Reduce gradle CI to PRs

--- a/.github/workflows/gradle-build-ci.yml
+++ b/.github/workflows/gradle-build-ci.yml
@@ -6,7 +6,7 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
 name: Run Gradle Build
-on: [push, pull_request]
+on: [pull_request]
 
 permissions:
   actions: read
