--- a/.github/workflows/gradle-build-ci.yml
+++ b/.github/workflows/gradle-build-ci.yml
@@ -6,7 +6,10 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
 name: Run Gradle Build
-on: [pull_request]
+on:
+  pull_request:
+  push:
+    branches: main
 
 permissions:
   actions: read
