feat: custom user agent, shared version constants
*Issue #, if available:*

*Description of changes:*
+ Introduce custom user agent info for Clean Rooms API requests
+ Share the version constant more widely and test for consistency explicitly

By submitting this pull request, I confirm that you can use, modify,
copy, and redistribute this contribution, under the terms of your
choice.

--- a/c3r-cli/build.gradle
+++ b/c3r-cli/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation project(":c3r-sdk-core")
     implementation project(":c3r-sdk-parquet")
 
+    // AWS Clean Rooms
+    implementation 'software.amazon.awssdk:cleanrooms:2.20.76'
+
     // CLI
     implementation 'info.picocli:picocli:4.7.4'
 
