--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ subprojects {
     // https://docs.gradle.org/current/userguide/checkstyle_plugin.html
     apply plugin: 'checkstyle'
 
+    // Shared C3R version
+    ext.c3r_version = rootProject.file('version.txt').text.trim()
+
+    // Shared dependency versions
     ext.freefair_version = '8.0.1'
     ext.junit_version = '5.9.3'
     ext.log4j_version = '2.20.0'
