--- a/.github/workflows/gradle-build-ci.yml
+++ b/.github/workflows/gradle-build-ci.yml
@@ -61,3 +61,19 @@ jobs:
         uses: gradle/gradle-build-action@v2.4.2
         with:
           arguments: build --parallel
+
+  # Here we wait on all builds and then check if any included "failure"
+  # in the result. This should mean `gradle-no-failures` is successful
+  # if and only if all builds either succed or are skipped (e.g., due to
+  # the `skip-duplicate-actions` action).
+  gradle-no-failures:
+    runs-on: ubuntu-latest
+    needs: gradle
+    if: always()
+    steps:
+      - name: All builds ok
+        if: ${{ !(contains(needs.*.result, 'failure')) }}
+        run: exit 0
+      - name: Some builds failed
+        if: ${{ contains(needs.*.result, 'failure') }}
+        run: exit 1
