feat: Feature/fingerprint type support (#554)
*Issue #, if available:*
P92507612

*Description of changes:*
Completed initial release of non-string types in fingerprint columns
rebased to latest main.

By submitting this pull request, I confirm that you can use, modify,
copy, and redistribute this contribution, under the terms of your
choice.

--- a/c3r-cli-spark/build.gradle
+++ b/c3r-cli-spark/build.gradle
@@ -36,6 +36,7 @@ spotbugs {
 dependencies {
     // AWS-C3R
     implementation project(":c3r-sdk-core")
+    implementation project(":c3r-sdk-parquet")
     testImplementation project(":c3r-sdk-parquet")
 
     // AWS Clean Rooms
