--- a/build.gradle
+++ b/build.gradle
@@ -42,9 +42,9 @@ subprojects {
         implementation "org.apache.logging.log4j:log4j-slf4j-impl:$log4j_version"
 
         // Test infrastructure
+        testImplementation "org.junit.jupiter:junit-jupiter:$junit_version"
         testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
         testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_version"
-        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit_version"
 
         // Test mocking
         testImplementation "org.mockito:mockito-core:$mockito_version"
@@ -83,11 +83,11 @@ subprojects {
         ignoreFailures = false
     }
 
-    tasks.withType(JavaCompile) {
+    tasks.withType(JavaCompile).configureEach {
         options.release = 11
     }
 
-    tasks.withType(Javadoc) {
+    tasks.withType(Javadoc).configureEach {
         options.addBooleanOption("Xdoclint:-missing", true)
     }
 
