Scope down GitHub Token
Signed-off-by: Adnan Khan <adnanek@amazon.com>

--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -1,6 +1,10 @@
 name: JaCoCo Report
 on: [ pull_request ]
 
+
+permissions:
+  contents: read
+
 jobs:
   # Adds the following filters:
   # Only run when files that influence the build are updated.
