--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -4,6 +4,10 @@ on:
     - cron: '0 0 * * *' # run at midnight every day
   workflow_dispatch: # enable manual runs from GitHub UI
 
+
+permissions:
+  contents: write
+
 jobs:
   repo-sync:
     runs-on: ubuntu-latest
