--- a/.github/workflows/gradle-build-ci.yml
+++ b/.github/workflows/gradle-build-ci.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-        java-version: [ '11', '17' ]
+        java-version: [ '17' ]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up repository
