--- a/c3r-sdk-parquet/build.gradle
+++ b/c3r-sdk-parquet/build.gradle
@@ -124,7 +124,7 @@ publishing {
     }
     repositories {
         maven {
-            url = 'https://aws.oss.sonatype.org/service/local/staging/deploy/maven2/'
+            url = 'https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/'
             credentials(PasswordCredentials)
         }
     }
